# uppd

./: NEWS.rst  README.rst  boil.py  pyproject.toml
.github/workflows/: unittests.yml
src/uppd/: __init__.py  uppd.py
test/uppd/: test_uppd.py
